--- a/src/MyFinanceWeb.Web/Views/PlanoConta/Index.cshtml
+++ b/src/MyFinanceWeb.Web/Views/PlanoConta/Index.cshtml
@@ -1,57 +1,7 @@
-﻿@model IEnumerable<MyFinanceWeb.Application.DTOs.PlanoContaDTOs.PlanoContaDTO>
-
+﻿@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
 @{
-    ViewData["Title"] = "Plano de Contas";
 }
 
-<div>
-    <h2>@ViewData["Title"]</h2>
-</div>
-<hr />
-<div class="row">
-    <div class="col-md-12">
-        <div>
-            <div class="d-flex justify-content-end">
-                <a asp-action="Create" class="btn btn-primary">
-                    <span title="Novo Registro" class="fas fa-plus"></span> Novo Registro
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-<br />
-<div class="panel panel-default">
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>
-                    Descrição
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Descricao)
-                    </td>
-                    <td class="d-flex justify-content-end gap-3">
-                        <a asp-action="Edit" asp-route-id="@item.Id" title="Edit" class="btn btn-warning">
-                            <span class="fas fa-edit">Edit</span>
-                        </a>
-
-                        <a asp-action="Details" asp-route-id="@item.Id" title="Details" class="btn btn-primary">
-                            <span class="fas fa-search">Details</span>
-                        </a>
-
-                        <a asp-action="Delete" asp-route-id="@item.Id" title="Delete" class="btn btn-danger">
-                            <span class="fas fa-trash-alt">Delete</span>
-                        </a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-</div>
+<h2>Plano de Contas</h2>
