--- a/src/MyFinanceWeb.Web/Views/Dashboard/Index.cshtml
+++ b/src/MyFinanceWeb.Web/Views/Dashboard/Index.cshtml
@@ -125,10 +125,9 @@ For more information on enabling MVC for empty projects, visit https://go.micros
     });
 
     //Atualizar gráficos
+    loadingData();
 
-
-
-    function loadingData(receita = 0.00, despesa = 0.00) {
+    function loadingData() {
 
         fetch(`/MovimentacaoContabil/${dataInicial.value}/${dataFinal.value}`)
             .then(response => response.json())
