--- a/src/MyFinanceWeb.Web/Views/Dashboard/Index.cshtml
+++ b/src/MyFinanceWeb.Web/Views/Dashboard/Index.cshtml
@@ -77,7 +77,7 @@ For more information on enabling MVC for empty projects, visit https://go.micros
             plugins: {
                 legend: {
                     position: 'top',
-                },
+                }
             },
         },
     });
@@ -118,9 +118,18 @@ For more information on enabling MVC for empty projects, visit https://go.micros
             },
             scales: {
                 y: {
-                    beginAtZero: true
+                    locale: "pt-BR",
+                    beginAtZero: true,
+                    ticks: {
+                        callback: (value, index, values) => {
+                            return new Intl.NumberFormat("pt-BR", {
+                                style: "currency",
+                                currency: "BRL"
+                            }).format(value);
+                        }
+                    }
                 }
-            }
+            },
         }
     });
 
