Ajuste controller para verbo http post

--- a/src/MyFinanceWeb.Web/Views/Transacao/Index.cshtml
+++ b/src/MyFinanceWeb.Web/Views/Transacao/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-12">
         <div>
             <div class="d-flex justify-content-end">
-                <a asp-action="Create" class="btn btn-primary">
+                <a onclick="cadastrarTransacao()" class="btn btn-primary">
                     <span title="Novo Registro" class="fas fa-plus"></span> Novo Registro
                 </a>
             </div>
@@ -55,3 +55,14 @@
         </tbody>
     </table>
 </div>
+
+<script>
+    function cadastrarTransacao() {
+        var form = document.createElement('form');
+        form.method = 'post';
+        form.action = '@Url.Action("Create")'; // Substitua por sua URL de ação
+
+        document.body.appendChild(form);
+        form.submit();
+    }
+</script>
