Adição de um select com os planos de contas na view de transacao

--- a/src/MyFinanceWeb.Web/Views/Transacao/Create.cshtml
+++ b/src/MyFinanceWeb.Web/Views/Transacao/Create.cshtml
@@ -8,26 +8,71 @@
     <h2>@ViewData["Title"]</h2>
 </div>
 
+<!-- Botão de voltar -->
+<div class="d-flex justify-content-end">
+    <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+</div>
+
 <form asp-controller="Transacao" asp-action="Create" method="post">
-    <!-- Botão de voltar -->
-    <div class="d-flex justify-content-end">
-        <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+
+    <!-- Exibir List de Planos de Conta -->
+    <div class="form-group" style="margin-bottom: 10px;">
+        <label for="PlanoContaId">Selecionar Plano de Conta:</label>
+        
+        @if (Model != null && Model.ListPlanoConta != null)
+        {
+            <select id="PlanoContaIdSelect" name="PlanoContaIdSelect" class="form-control">
+                @foreach (var planoConta in Model.ListPlanoConta)
+                {
+                    <option value="@planoConta.Id">@planoConta.Descricao</option>
+                }
+            </select>
+        }
+        else
+        {
+            <p>Lista de planos de conta não disponível.</p>
+        }
     </div>
 
+    <!-- Input id do plano de conta -->
+    <div class="form-group">
+        <label for="PlanoContaId">ID Plano de Conta: <span id="PlanoContaId"></span></label>
+        <input type="number" id="PlanoContaId" name="PlanoContaId" class="form-control" />
+    </div>
+
+    <!-- Input nome da transação -->
     <div class="form-group">
         <label for="Historico">Nome Transação:</label>
         <input type="text" id="Historico" name="Historico" class="form-control" />
     </div>
 
+    <!-- Input valor da transação -->
     <div class="form-group">
         <label for="Valor">Valor:</label>
         <input type="number" id="Valor" name="Valor" class="form-control" />
     </div>
 
+    <!-- Input data da transação -->
     <div class="form-group">
         <label for="Data">Data:</label>
         <input type="datetime-local" id="Data" name="Data" class="form-control" />
     </div>
 
+    <!-- Confirmar (Submit) -->
     <button type="submit" class="btn btn-primary" style="margin-top: 10px;">Salvar</button>
 </form>
+
+<script>
+    // Adicionar manipulador de eventos para adicionar o ID selecionado no input PlanoContaId
+    document.addEventListener('DOMContentLoaded', function () {
+        var select = document.getElementById('PlanoContaIdSelect');
+        var numberInput = document.getElementById('PlanoContaId');
+        var label = document.getElementById('PlanoContaId');
+
+        select.addEventListener('change', function () {
+            var selectedId = select.value;
+            numberInput.value = selectedId;
+            label.textContent = selectedId;
+        });
+    });
+</script>
