--- a/src/MyFinanceWeb.Web/Views/Transacao/Index.cshtml
+++ b/src/MyFinanceWeb.Web/Views/Transacao/Index.cshtml
@@ -60,7 +60,7 @@
     function cadastrarTransacao() {
         var form = document.createElement('form');
         form.method = 'post';
-        form.action = '@Url.Action("Create")'; // Substitua por sua URL de ação
+        form.action = '@Url.Action("Create")';
 
         document.body.appendChild(form);
         form.submit();
