--- a/src/MyFinanceWeb.Web/Views/Transacao/Index.cshtml
+++ b/src/MyFinanceWeb.Web/Views/Transacao/Index.cshtml
@@ -12,8 +12,8 @@
     <div class="col-md-12">
         <div>
             <div class="d-flex justify-content-end">
-                <a onclick="cadastrarTransacao()" class="btn btn-primary">
-                    <span title="Novo Registro" class="fas fa-plus"></span> Novo Registro
+                <a asp-controller="Transacao" asp-action="Create" title="Create" class="btn btn-primary">
+                    <span class="fas fa-search">Novo Registro</span>
                 </a>
             </div>
         </div>
@@ -59,7 +59,7 @@
 <script>
     function cadastrarTransacao() {
         var form = document.createElement('form');
-        form.method = 'post';
+        form.method = 'get';
         form.action = '@Url.Action("Create")';
 
         document.body.appendChild(form);
