--- a/src/MyFinanceWeb.Web/Views/Transacao/Edit.cshtml
+++ b/src/MyFinanceWeb.Web/Views/Transacao/Edit.cshtml
@@ -26,7 +26,7 @@
     <!-- Input valor da transação -->
     <div class="form-group">
         <label for="Valor">Valor: (0.00)</label>
-        <input type="number" placeholder="0.00" required min="0.00"  id="Valor" name="Valor" class="form-control" value="@Model.Valor" />
+        <input type="number" placeholder="0.00" required id="Valor" name="Valor" class="form-control" value="@Model.Valor" />
     </div>
 
     <!-- Input data da transação -->
